src/ui/snapshots/coxtop__ui__settings_frame__tests__renders_a_refusal_beside_the_field_with_the_edit_still_staged.snap
---
source: src/ui/settings_frame.rs
assertion_line: 697
expression: terminal.backend().to_string()
---
"> lanes and machines   lanes and machines                                                           "
"  models and tiers     > lanes.max   4  .cox/settings.toml  git-tracked  above the ceiling of 5     "
"  crew seats             lanes.idle  2  ~/.cox/local.toml   machine-local                           "
"                                                                                                    "
"                       staged                                                                       "
"                       > $ cox settings set repo lanes.max 6 --dry-run                              "
"                           above the ceiling of 5                                                   "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"Up/Down field   Enter edit   Tab next pane   r reload   Esc close                                   "
