src/ui/snapshots/coxtop__ui__settings_frame__tests__renders_the_loading_state.snap
---
source: src/ui/settings_frame.rs
assertion_line: 703
expression: terminal.backend().to_string()
---
"loading settings…                                                                                   "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
